--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^10.0.0",
     "human-readable": "^0.2.1",
     "imagemagick": "^0.1.3",
+    "javascript-obfuscator": "^4.1.0",
     "jimp": "^0.16.2",
     "jsdom": "^16.7.0",
     "lodash": "^4.17.21",
